fix: Layout issue with article footer

--- a/app/blog/blog.css
+++ b/app/blog/blog.css
@@ -76,8 +76,8 @@
         }
       }
     }
-    & + footer {
-      @apply pl-4 pt-4 border-t border-muted space-y-1;
+    footer {
+      @apply px-4 pt-4 border-t border-muted space-y-1;
       div {
         @apply text-sm;
       }
